--- a/style.css
+++ b/style.css
@@ -3,21 +3,21 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    color: white;
 }
 
 body{
     background-color: #212121;
+    color: white;
 }
 h1{
     text-align: center;
-    margin-top: 3%;
+    margin-top: 3rem;
 }
 .container{
     position: relative;
     display: flex;
     justify-content: center;
-    margin-top: 8%;
+    margin-top: 6rem;
 }
 .clock{
     width: 300px;
